--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --outDir dist",
-    "start": "node dist/index.js"
+    "start": "tsc --outDir dist && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/parser": "^7.22.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.7"
   }
 }
